# book_bank

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  presentation.md  pyproject.toml
book_bank/: app.py  dblayout.py  extensions.py  routes.py
book_bank/migrations/versions/: 59dc8d86d61f_second_migration_added_foreign_keys_and_.py  8f1355810c93_second_migration_added_foreign_keys_and_.py
frontend/: Dockerfile  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.html  index.tsx
frontend/src/components/: app.tsx  root.tsx
frontend/src/components/book_list/: books.css  books.tsx
frontend/src/components/context/: actions.js  context.js  helperfuncs.js  reducer.js  routes_util.js
frontend/src/components/edit_book/: editbook.tsx
frontend/src/components/greeting/: greeting.css  greeting.tsx
frontend/src/components/homepage/: homepage.css  homepage.tsx
frontend/src/components/post_book/: form_book.css  form_book_page.tsx
frontend/src/components/user_ui/: user_form.css  user_form.tsx
