[tool.poetry]
name = "book_bank"
version = "0.1.0"
description = ""
authors = ["Christopher Lee <clee@keplergrp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.1"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.26.1"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.3.0"
Flask-Bcrypt = "^0.7.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
mypy = "^0.910"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
